[gd_scene load_steps=4 format=3 uid="uid://bdaietjd46xcd"]

[ext_resource type="Script" path="res://classes/Orb.gd" id="1_h084r"]
[ext_resource type="PackedScene" uid="uid://ryx7sbtbhixk" path="res://Hitbox.tscn" id="2_x87vd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_siy4a"]
radius = 30.0

[node name="Orb" type="Sprite2D"]
script = ExtResource("1_h084r")

[node name="Hitbox" parent="." instance=ExtResource("2_x87vd")]

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CircleShape2D_siy4a")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_siy4a")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="mouse_entered" from="Hitbox" to="." method="_on_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_hitbox_mouse_exited"]

[editable path="Hitbox"]
